err/petl-ldap3.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ldap3'...
Listing './lib/python3.5/site-packages/ldap3/abstract'...
Listing './lib/python3.5/site-packages/ldap3/core'...
Listing './lib/python3.5/site-packages/ldap3/extend'...
Listing './lib/python3.5/site-packages/ldap3/extend/microsoft'...
Listing './lib/python3.5/site-packages/ldap3/extend/novell'...
Listing './lib/python3.5/site-packages/ldap3/extend/standard'...
Listing './lib/python3.5/site-packages/ldap3/operation'...
Listing './lib/python3.5/site-packages/ldap3/protocol'...
Listing './lib/python3.5/site-packages/ldap3/protocol/formatters'...
Listing './lib/python3.5/site-packages/ldap3/protocol/sasl'...
Listing './lib/python3.5/site-packages/ldap3/protocol/schemas'...
Listing './lib/python3.5/site-packages/ldap3/strategy'...
Listing './lib/python3.5/site-packages/ldap3/utils'...
Listing './lib/python3.5/site-packages/ldap3-2.4.dist-info'...
Listing './lib/python3.5/site-packages/petl'...
Listing './lib/python3.5/site-packages/petl/io'...
Listing './lib/python3.5/site-packages/petl/test'...
Listing './lib/python3.5/site-packages/petl/test/io'...
Listing './lib/python3.5/site-packages/petl/test/transform'...
Listing './lib/python3.5/site-packages/petl/test/util'...
Listing './lib/python3.5/site-packages/petl/transform'...
Listing './lib/python3.5/site-packages/petl/util'...
Listing './lib/python3.5/site-packages/petl-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/petl_ldap3-0.0.6.egg-info'...
Compiling './lib/python3.5/site-packages/petl_ldap3.py'...
***   File "./lib/python3.5/site-packages/petl_ldap3.py", line 58
    logger.exception(f'No value returned for attribute: {attribute} and no default could be found.')
                                                                                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyasn1'...
Listing './lib/python3.5/site-packages/pyasn1/codec'...
Listing './lib/python3.5/site-packages/pyasn1/codec/ber'...
Listing './lib/python3.5/site-packages/pyasn1/codec/cer'...
Listing './lib/python3.5/site-packages/pyasn1/codec/der'...
Listing './lib/python3.5/site-packages/pyasn1/codec/native'...
Listing './lib/python3.5/site-packages/pyasn1/compat'...
Listing './lib/python3.5/site-packages/pyasn1/type'...
Listing './lib/python3.5/site-packages/pyasn1-0.4.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
